--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -93,7 +93,7 @@
   position: relative;
   margin: 0px;
   padding: 0px;
-  overflow: visible;  
+  overflow: visible;
 }
 
 .onboarding-cursor {
@@ -164,7 +164,7 @@
 #cliqzExtOnboardingCallout .cliqz-logo {
   background-image: url(chrome://cliqzres/content/skin/img/cliqz.svg);
   background-repeat: no-repeat;
-  height: 20px;  
+  height: 20px;
   margin-left: 20px;
 }
 
@@ -393,7 +393,7 @@
 }
 
 #cliqz-results .cqz-ez-aTob-title {
-  margin-bottom: 3px;   
+  margin-bottom: 3px;
 }
 
 #cliqz-results .cqz-ez-aTob table.list th {
@@ -402,16 +402,16 @@
   font-weight: normal;
   padding: 0 0 9px;
 }
-            
-#cliqz-results .cqz-ez-aTob table.list td, 
+
+#cliqz-results .cqz-ez-aTob table.list td,
 #cliqz-results .cqz-ez-aTob table.list th {
   border-bottom: 1px solid #e7f1e5;
 }
-            
+
 #cliqz-results .cqz-ez-aTob table.list tbody > tr:last-child > td {
   border-bottom: 0px;
 }
-            
+
 #cliqz-results .cqz-ez-aTob table.list td {
   padding: 6px;
   color: #506bb8;
@@ -421,13 +421,13 @@
   text-align: center;
   width: 60px;
 }
-            
+
 #cliqz-results .cqz-ez-aTob table.list th.empty {
   width: 130px;
 }
 
 #cliqz-results .cqz-ez-aTob table.list .label{
-  color: #000000;    
+  color: #000000;
 }
 
 #cliqz-results .cqz-ez-aTob .iconImage.bus,
@@ -437,7 +437,7 @@
 
 #cliqz-results .cqz-ez-aTob .iconContainer {
   height: 18px;
-  width: 18px; 
+  width: 18px;
 }
 
 /* Common accessible styles to use icons as images instead of background-image */
@@ -455,3 +455,143 @@
 #cliqz-results .iconLabel {
    margin-left: 10px
 }
+
+
+/***** LOCAL MOVIE EZ ******/
+#cliqz-results .movie_container {
+  height:120px;
+  max-height:120px;
+}
+
+#cliqz-results .movie_poster, #cliqz-results .movie_poster_img {
+  max-width: 80px;
+  border-radius: 6px;
+}
+
+#cliqz-results .movie_poster {
+  position:absolute;
+}
+
+#cliqz-popup #cliqz-results .movie_data {
+  margin-left: 100px;
+  height:115px;
+  padding-right: 60px;
+}
+
+#cliqz-results .movie_url {
+  margin-top: 0px;
+  margin-bottom:10px;
+}
+
+#cliqz-results .cqz-ez-title.movie_title {
+  margin-bottom: 10px;
+  display:block;
+}
+
+#cliqz-results .movie_description {
+  text-align: left;
+}
+
+#cliqz-results .cqz-rating-star-on {
+  color:#FDDD32;
+}
+
+#cliqz-results .cqz-rating-star-off {
+  color:#CDCDCD;
+}
+
+#cliqz-results .movie_desc {
+  max-height:150px;
+  padding-left:10px;
+  overflow:ellipsis;
+  white-space: normal
+}
+
+#cliqz-results .cinema-showtimes-table {
+  width:100%;
+  max-width:650px;
+  border-spacing: 0;
+  border-collapse: collapse;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+#cliqz-results .cinema-showtimes-container {
+  width:80%;
+  max-width:650px;
+}
+
+#cliqz-results .cinema-name-td, #cliqz-results .cinema-showtime-td  {
+  font-size: 16px;
+  border-top: 1px solid #EAEAEA;
+  padding-top:5px;
+  padding-bottom:5px;
+  max-width:100px;
+}
+#cliqz-results .cinema-name {
+  font-size: 16px;
+}
+
+#cliqz-results .cinema-row {
+  height:15px;
+}
+#cliqz-results .cinema-showtime-td  {
+  text-align:center;
+  color:#CECECE;
+}
+
+#cliqz-results .showtimes-date {
+  float:right;
+  margin-bottom: 10px;
+  margin-top:0px;
+  color:#CECECE;
+}
+
+#cliqz-results .movie-trailer-btn {
+  margin-top:0px;
+}
+
+#cliqz-results .location_permission_prompt {
+  height: 85px;
+  background-color: rgb(255, 83, 73);
+  color: #FFF;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+#cliqz-results .loc_permission_prompt_message {
+  height: 70%;
+  font-size:16px;
+  white-space: normal;
+}
+
+#cliz-results .cqz_location_once {
+  color:white;
+}
+
+#cliqz-results .cqz_location_never {
+  color:white;
+}
+
+#cliqz-results .loc_permission_prompt_buttons>span {
+  border-radius: 6px;
+  display: inline-block;
+  margin-bottom: 10px;
+  position: relative;
+  border: 1px solid white;
+  margin-right: 10px;
+  height: 15px;
+  padding: 5px 10px 7px;
+  background: transparent none repeat scroll 0% 0%;
+}
+
+#cliqz-results .loc_permission_prompt_buttons>span#cqz_location_yes {
+  border: none;
+  height: 18px;
+  background-color: rgb(47, 196, 252);
+  width: 40px;
+  text-align: center;
+}
+
+/*** END LOCAL MOVIE EZ ****/
