--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -226,19 +226,24 @@
   font-weight: 500;
 }
 
-#cliqzExtOnboardingCallout .onboarding-callout { font-weight: 300; }
-
+#cliqzExtOnboardingCallout .onboarding-callout { font-weight: 300; padding: 0px; }
 #cliqzExtOnboardingCallout .panel-arrowcontent { padding-top: 0px; }
-
 #cliqzExtOnboardingCallout .panel-arrowcontent { background: #FD544F; color: white; }
 
 /*#cliqzExtOnboardingCallout .panel-arrow { list-style-image: url(chrome://cliqzres/content/skin/panelarrow-vertical-red.png); }*/
 
 .onboarding-callout .msg-container { position: relative; display: block; white-space: pre-line; max-width: 300px; line-height: 1.4; }
+#cliqzExtOnboardingCallout[msg_type="same_result"] .onboarding-callout .msg-container { max-width: 200px; }
+#cliqzExtOnboardingCallout[msg_type="typed_url"] .onboarding-callout .msg-container { max-width: 600px; }
 
 .onboarding-callout .btn-container,
 .onboarding-callout .btn-container-extended { position: relative; display: block; right: 0px; text-align: right; margin-top: 10px; }
-.onboarding-callout .btn-container-extended { text-align: center; width: 100%; }
+.onboarding-callout .btn-container-extended {margin-top: 20px; }
+
+.onboarding-callout .logo-container { position: relative; display: block; right: 0px; text-align: center; margin-top: 10px; }
+
+#cliqzExtOnboardingCallout[msg_type="same_result"] .onboarding-callout .btn-container-extended { text-align: center; width: 100%; }
+#cliqzExtOnboardingCallout[msg_type="typed_url"] .onboarding-callout .btn-container-extended { text-align: right; width: 100%; }
 
 .onboarding-callout .btn-container .cqz-btn,
 .onboarding-callout .btn-container-extended .cqz-btn {
@@ -255,7 +260,8 @@
     font-weight: 500;
 }
 
-.onboarding-callout .btn-container-extended .cqz-btn { display: block; max-width: 160px; }
+#cliqzExtOnboardingCallout[msg_type="same_result"] .onboarding-callout .btn-container-extended .cqz-btn { display: block; max-width: 160px; }
+#cliqzExtOnboardingCallout[msg_type="typed_url"] .onboarding-callout .btn-container-extended .cqz-btn { display: inline; max-width: 160px; }
 
 .onboarding-callout .btn-container .cqz-btn-ok { background-color: #8CE12F; }
 .onboarding-callout .btn-container .cqz-btn-cancel { background-color: #c3043e; color: white; }
@@ -267,10 +273,11 @@
   background-image: url(chrome://cliqzres/content/skin/img/cliqz.svg);
   background-repeat: no-repeat;
   height: 20px;  
-  margin-left: 20px;
   width: 100px;
-  margin-top: 30px;
 }
+
+#cliqzExtOnboardingCallout[msg_type="same_result"] .cliqz-logo { margin-left: 20px;  margin-top: 30px; }
+#cliqzExtOnboardingCallout[msg_type="typed_url"] .cliqz-logo { margin: 0px; float: left;}
 
 /* ------- END onboarding */
 
