--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -230,7 +230,15 @@
 #cliqzExtOnboardingCallout .panel-arrowcontent { padding-top: 0px; }
 #cliqzExtOnboardingCallout .panel-arrowcontent { background: #FD544F; color: white; }
 
-/*#cliqzExtOnboardingCallout .panel-arrow { list-style-image: url(chrome://cliqzres/content/skin/panelarrow-vertical-red.png); }*/
+#cliqzExtOnboardingCallout .panel-arrow[side="top"],
+#cliqzExtOnboardingCallout .panel-arrow[side="bottom"] {
+    list-style-image: url(chrome://cliqzres/content/skin/panelarrow-red-horizontal.svg);
+}
+
+#cliqzExtOnboardingCallout .panel-arrow[side="left"],
+#cliqzExtOnboardingCallout .panel-arrow[side="right"] {
+  list-style-image: url(chrome://cliqzres/content/skin/panelarrow-red-vertical.svg);
+}
 
 .onboarding-callout .msg-container { position: relative; display: block; white-space: pre-line; max-width: 300px; line-height: 1.4; }
 #cliqzExtOnboardingCallout[msg_type="same_result"] .onboarding-callout .msg-container { max-width: 200px; }
