--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -390,7 +390,7 @@
 /* ez currency */
 #cliqz-results .EZ-currency-result { font-size: 48px; margin-top: -6px; }
 #cliqz-results .EZ-currency-rate { color: #999999; margin: 11px 0px 3px; }
-#cliqz-results .EZ-currency-disclaimer { color: #cccccc; }
+#cliqz-results .EZ-currency-disclaimer { color: #cccccc; margin-left: 15px; font-size: 14px; }
 #cliqz-results .EZ-currency-result .cqz-currency-symbol {
     margin-right: 4px;
 }
