--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -379,13 +379,15 @@
 
 /* ez stock */
 #cliqz-results .cqz-ez-stock-exchange, #cliqz-results .cqz-disclaimer { font-size: 12px; color: #cccccc; }
-#cliqz-results .cqz-ez-stock-trend { margin-top: 13px; font-size: 25px; }
-#cliqz-results .cqz-ez-img-trend { width: 12px; height: 18px; display: inline-block; margin: 0 4px 0 18px; }
+#cliqz-results .cqz-ez-stock-exchange { font-size: 14px; }
+#cliqz-results .cqz-ez-stock-trend { margin-top: 13px; font-size: 36px; }
+#cliqz-results .cqz-ez-img-trend { width: 20px; height: 27px; display: inline-block; margin: 0 10px 0 18px; }
 #cliqz-results .green { color: #74d463; }
 #cliqz-results .red { color: #c3043e; }
-#cliqz-results .cliqz-stock-price-table { margin: 8px 0; border-spacing: 1; color: #999999; }
-#cliqz-results .cliqz-stock-price-table td { font-size: 12px; }
+#cliqz-results .cliqz-stock-price-table { margin: 10px 0 2px; border-spacing: 1; color: #999999; border-collapse: collapse; }
+#cliqz-results .cliqz-stock-price-table td { padding-bottom: 4px; }
 #cliqz-results .cliqz-stock-price-td { padding-left: 28px; }
+#cliqz-results .cliqz-stock-price-td:last-child { padding-left: 10px; }
 
 /* ez currency */
 #cliqz-results .EZ-currency-result { font-size: 48px; margin-top: -6px; }
