change margin for rich snippet UI - movie

--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -76,9 +76,10 @@
 
 
 /* ------- RICH DATA Result----------*/
+#cliqz-results .cqz-result-padding2 {padding-top: 20px; padding-bottom: 20px; padding-left: 20px;}
 #cliqz-results .cqz-rd .cqz-ez-btns {margin-top: 19px;}
 #cliqz-results .cqz-rd-body {height: calc(100% - 50px); width: calc(100% - 90px); max-width: 700px;}
-#cliqz-results .cqz-rd-rateimg { height: 13px; transform: translateX(-2px);}
+#cliqz-results .cqz-rd-rateimg { height: 13px; transform: translateX(-1px);}
 #cliqz-results .cqz-rd-max-lines4 {white-space: normal; overflow: hidden; height: 4.8em; line-height: 1.2em; }
 #cliqz-results .cqz-rd-max-lines4:before {
     white-space: normal; content:""; float: left; width: 5px; height: 4.8em;}
@@ -109,16 +110,16 @@
 #cliqz-results .cqz-rd-link{color: #506bb8;}
 
 #cliqz-results .cqz-rd-h3 {width: calc(100% - 90px)}
-#cliqz-results .cqz-rd-h3img-div {height: 82px; float:left; margin-right: 20px; max-width: 130px}
+#cliqz-results .cqz-rd-h3img-div {height: 76px; float:left; margin-right: 20px; max-width: 50px}
 #cliqz-results .cqz-rhh3-snipet-txt {max-width: 700px;}
 #cliqz-results .cqz-rhh3-snipet-txt .cqz-result-url{margin-top: 3px; margin-bottom: 0px; max-width: 500px;}
 
 #cliqz-results .cqz-rd-img {height:  100%; display:block;}
 #cliqz-results .cqz-rd-snippet_hspacing {padding-top: 18px;}
-#cliqz-results .cqz-rd-img_div {float: left; margin-right: 20px; height: 100%; max-width: 200px}
+#cliqz-results .cqz-rd-img_div {float: left; margin-right: 20px; height: 100%; max-width: 130px}
 #cliqz-results .cqz-rd-h3-snippet {height: 110px; margin: 22px 0px 22px 0px;}
 
-#cliqz-results .cqz-rd-h2-snippet {height: 200px; margin: 22px 0px 12px 0px;}
+#cliqz-results .cqz-rd-h2-snippet {height: 200px; margin: 20px 0px 14px 0px;}
 
 /* ------- END RICH DATA Result----------*/
 
