--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -172,9 +172,12 @@
     margin: 0 7px 4px 0;
     padding: 0 9px 2px;
     cursor: pointer;
-    color: white;
+    color: #fff;
     text-decoration: none;
     border-radius: 3px;
+}
+#cliqz-results a.cqz-ez-btn:visited {
+    color: #fff !important;
 }
 
 #cliqz-results .cqz-vert-center { position: absolute; top: 50%;	-moz-transform: translateY(-49%); transform: translateY(-49%); }
@@ -436,7 +439,12 @@
 #cliqz-results .cqz-weather-holder {
     overflow: hidden;
     margin-bottom: 20px;
+    max-height: 106px;
 }
+#cliqz-results .cqz-weather-holder .EZ-weather-container{
+    margin-bottom: 15px;
+}
+
 #cliqz-results .ez-weather .cqz-ez-btn {
     background: #ABC8E2;
 }
