--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -421,7 +421,7 @@
 /* ez weather */
 #cliqz-results .ez-weather .alert {
     height: 100px;
-    background-image: url(https://cdn.cliqz.com/extension/EZ/weather/warning_2.svg);
+    background-image: url(https://cdn.cliqz.com/extension/EZ/weather-new2/warning_2.svg);
     background-size: 54px 54px;
     background-position: 22px center;
     padding-left: calc(22px + 54px + 18px);
@@ -432,17 +432,18 @@
 #cliqz-results .EZ-weather-icon { height: 26px; width: 26px; margin-left: 15px; margin-top: 13px; }
 #cliqz-results .EZ-weather-city { font-size: 18px; color: #333333; margin-top: 12px; margin-bottom: 18px; float: left; }
 #cliqz-results .EZ-weather-info-sec { height: 128px; }
-#cliqz-results .EZ-weather-container { float: left; width: 60px; margin-right: 36px; }
-#cliqz-results .EZ-weather-date, #cliqz-results .EZ-weather-temp { text-align: center; }
+#cliqz-results .EZ-weather-container { float: left; width: 60px; margin-right: 40px; }
+#cliqz-results .EZ-weather-temp { margin-top: 4px; }
 #cliqz-results .EZ-weather-temp span { color: #999999; margin-left: 10px; display: inline-block; vertical-align: bottom; }
 #cliqz-results .EZ-weather-img { background-position: center center; background-size: contain; height: 62px; margin: 5px 0 }
 #cliqz-results .cqz-weather-holder {
     overflow: hidden;
     margin-bottom: 20px;
-    max-height: 106px;
+    max-height: 110px;
 }
 #cliqz-results .cqz-weather-holder .EZ-weather-container{
     margin-bottom: 15px;
+    text-align: center;
 }
 
 #cliqz-results .ez-weather .cqz-ez-btn {
