--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -602,22 +602,23 @@
 
 /***** LOCAL MOVIE EZ ******/
 #cliqz-results .movie_container {
-  height:120px;
-  max-height:120px;
+  height:160px;
+  max-height:160px;
 }
 
 #cliqz-results .movie_poster, #cliqz-results .movie_poster_img {
-  max-width: 80px;
+  max-width: 110px;
   border-radius: 6px;
 }
 
 #cliqz-results .movie_poster {
-  position:absolute;
+  /* position:absolute; */
+  float:left;
 }
 
 #cliqz-popup #cliqz-results .movie_data {
-  margin-left: 100px;
-  height:115px;
+  margin-left: 125px;
+  height:160px;
   padding-right: 60px;
 }
 
@@ -656,7 +657,6 @@
   border-spacing: 0;
   border-collapse: collapse;
   margin-top: 10px;
-  margin-bottom: 5px;
 }
 
 #cliqz-results .local-sc-data-container {
@@ -691,14 +691,14 @@
 }
 
 #cliqz-results .movie-trailer-btn {
-  margin-top:0px;
+  position: relative;
+  bottom: -12px;
 }
 
 #cliqz-results .location_permission_prompt {
   height: 85px;
   background-color: rgb(255, 83, 73);
   color: #FFF;
-  margin-bottom: 10px;
   margin-top: 10px;
   padding: 10px;
 }
