--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -721,7 +721,7 @@
 }
 #cliqz-results .cinema-showtime-td  {
   text-align:center;
-  color:#CECECE;
+  /* color:#CECECE; */
 }
 
 #cliqz-results .showtimes-date {
